# Mobile_Robot

./: .gitignore
base_board/: CMakeLists.txt  package.xml
base_board/include/: BaseBoardHandler.h  BaseBoardNode.h  CircularBuffer.h
base_board/launch/: 10-scale_car.launch  base_board.launch
base_board/src/: BaseBoardHandler.cpp  BaseBoardNode.cpp  CircularBuffer.cpp  node.cpp
robot_controller/: CMakeLists.txt  package.xml
robot_controller/launch/: robot_controller.launch
robot_controller/log/: 0.csv
robot_controller/script/: bicycle_mpc.py  diff_mpc.py  path_gen.py  torch_mpc.py
robot_controller/src/: MPCController.cpp  MPC_control.cpp
